--- a/config.json
+++ b/config.json
@@ -10,33 +10,33 @@
     }
   },
   "staerkenFormulierungen": {
-    "Fachliches Arbeiten_0": "Du arbeitest konzentriert und ausdauernd",
-    "Fachliches Arbeiten_1": "Du sammelst Informationen zielgerichtet",
-    "Fachliches Arbeiten_2": "Du setzt dein Wissen sinnvoll ein",
-    "Fachliches Arbeiten_3": "Du denkst kreativ und lösungsorientiert",
-    "Fachliches Arbeiten_4": "Du strukturierst deine Arbeit logisch und klar",
-    "Fachliches Arbeiten_5": "Du zeigst Verantwortungsbewusstsein beim Arbeiten",
-    "Zusammenarbeit_0": "Du arbeitest konstruktiv im Team",
-    "Zusammenarbeit_1": "Du übernimmst Verantwortung in der Gruppe",
-    "Zusammenarbeit_2": "Du hörst anderen zu und respektierst Meinungen",
-    "Zusammenarbeit_3": "Du unterstützt andere aktiv",
-    "Zusammenarbeit_4": "Du löst Konflikte fair und eigenständig",
-    "Kommunikation_0": "Du drückst dich klar und verständlich aus",
-    "Kommunikation_1": "Du hältst Blickkontakt und sprichst sicher",
-    "Kommunikation_2": "Du kannst Feedback geben und annehmen",
-    "Kommunikation_3": "Du nimmst aktiv an Gesprächen teil",
-    "Kommunikation_4": "Du kannst Inhalte gut präsentieren",
-    "Eigenständigkeit_0": "Du arbeitest selbstständig und zielgerichtet",
-    "Eigenständigkeit_1": "Du zeigst Eigeninitiative",
-    "Eigenständigkeit_2": "Du triffst Entscheidungen und stehst dazu",
-    "Eigenständigkeit_3": "Du erkennst Probleme und gehst sie an",
-    "Reflexionsfähigkeit_0": "Du kannst deine Stärken und Schwächen benennen",
-    "Reflexionsfähigkeit_1": "Du denkst über deinen Lernprozess nach",
-    "Reflexionsfähigkeit_2": "Du lernst aus Fehlern und verbesserst dich",
-    "Reflexionsfähigkeit_3": "Du beschreibst, was gut lief und was nicht",
-    "Persönlichkeitsentwicklung_0": "Du zeigst Mut, neue Wege zu gehen",
-    "Persönlichkeitsentwicklung_1": "Du bleibst auch bei Schwierigkeiten dran",
-    "Persönlichkeitsentwicklung_2": "Du entwickelst dich im Laufe des Projekts spürbar weiter",
-    "Persönlichkeitsentwicklung_3": "Du nutzt Rückmeldungen zur Verbesserung"
+    "Fachliches Arbeiten_0": "[NAME] arbeitet konzentriert und ausdauernd",
+    "Fachliches Arbeiten_1": "[NAME] sammelt Informationen zielgerichtet",
+    "Fachliches Arbeiten_2": "[NAME] setzt Wissen sinnvoll ein",
+    "Fachliches Arbeiten_3": "[NAME] denkt kreativ und lösungsorientiert",
+    "Fachliches Arbeiten_4": "[NAME] strukturiert die Arbeit logisch und klar",
+    "Fachliches Arbeiten_5": "[NAME] zeigt Verantwortungsbewusstsein beim Arbeiten",
+    "Zusammenarbeit_0": "[NAME] arbeitet konstruktiv im Team",
+    "Zusammenarbeit_1": "[NAME] übernimmt Verantwortung in der Gruppe",
+    "Zusammenarbeit_2": "[NAME] hört anderen zu und respektiert Meinungen",
+    "Zusammenarbeit_3": "[NAME] unterstützt andere aktiv",
+    "Zusammenarbeit_4": "[NAME] löst Konflikte fair und eigenständig",
+    "Kommunikation_0": "[NAME] drückt sich klar und verständlich aus",
+    "Kommunikation_1": "[NAME] hält Blickkontakt und spricht sicher",
+    "Kommunikation_2": "[NAME] kann Feedback geben und annehmen",
+    "Kommunikation_3": "[NAME] nimmt aktiv an Gesprächen teil",
+    "Kommunikation_4": "[NAME] kann Inhalte gut präsentieren",
+    "Eigenständigkeit_0": "[NAME] arbeitet selbstständig und zielgerichtet",
+    "Eigenständigkeit_1": "[NAME] zeigt Eigeninitiative",
+    "Eigenständigkeit_2": "[NAME] trifft Entscheidungen und steht dazu",
+    "Eigenständigkeit_3": "[NAME] erkennt Probleme und geht sie an",
+    "Reflexionsfähigkeit_0": "[NAME] kann eigene Stärken und Schwächen benennen",
+    "Reflexionsfähigkeit_1": "[NAME] denkt über den eigenen Lernprozess nach",
+    "Reflexionsfähigkeit_2": "[NAME] lernt aus Fehlern und verbessert sich",
+    "Reflexionsfähigkeit_3": "[NAME] beschreibt, was gut lief und was nicht",
+    "Persönlichkeitsentwicklung_0": "[NAME] zeigt Mut, neue Wege zu gehen",
+    "Persönlichkeitsentwicklung_1": "[NAME] bleibt auch bei Schwierigkeiten dran",
+    "Persönlichkeitsentwicklung_2": "[NAME] entwickelt sich im Laufe des Projekts spürbar weiter",
+    "Persönlichkeitsentwicklung_3": "[NAME] nutzt Rückmeldungen zur Verbesserung"
   }
 }
